# ZionAIMedFlow-v2

./: .dockerignore  .gitignore  Makefile  README.md  azure.yaml  buildlocalpackage.sh  dummy_file.txt  fullrun.sh  medicalnotes.md  package-lock.json  pyproject.toml  pytest.ini  sonar-project.properties  startazurestore.sh  testcli.py
infra/: main.bicep  (+1 more)
src/: .env-sample  Dockerfile  MANIFEST.in  buildnorun.sh  monitor_table.sh  pyproject.toml  requirements.txt
src/MyMDNotes/backend/: Dockerfile  Makefile  app.py  mgdatabase.py  requirements.txt  settings.py
src/MyMDNotes/backend/docker/startup/: init_container.sh
src/MyMDNotes/mymdnotes/: .dockerignore  Dockerfile  F147B1EAF8.txt  bun.lockb  index.html  package-lock.json  package.json
src/MyMDNotes/mymdnotes/interfaces/: index.ts
src/MyMDNotes/mymdnotes/server/: package.json
src/MyMDNotes/mymdnotes/server/startup/: init_container.sh  sshd_config
src/MyMDNotes/mymdnotes/src/: App.tsx  index.css
src/MyMDNotes/mymdnotes/src/auth/: authConfig.ts
src/MyMDNotes/mymdnotes/src/components/: index.ts  popup.tsx
src/MyMDNotes/mymdnotes/src/components/Component/: Component.tsx
src/MyMDNotes/mymdnotes/src/components/Header/: Header.tsx
src/azurefunctions/mymdnotes/: function_app.py  mgdatabase.py  models.py  requirements.txt
src/azurefunctions/ocrextractinfo/: azurequeue.py  function_app.py  pgdatabase.py  requirements.txt
src/docker/startup/: init_container.sh
src/dpsiw/: constants.py  exceptions.py  testsendsb.py  version.py
src/dpsiw/agents/: __init__.py  agent.py  extractagent.py  medicalnotesagent.py  ocragent.py  productgenerationagent.py  riskanalysisagent.py
src/dpsiw/cmd/: clickedaliasedgroup.py  root.py
src/dpsiw/messages/: message.py
src/dpsiw/services/: __init__.py  azureblob.py  azureservicebus.py  azurespeech.py  filewatcher.py  llmocrservice.py  llmservice.py  mgdatabase.py  mockdatagenerators.py  mockproducer.py  mockproducersb.py  mockpysiciandata.py  pgdatabase.py  servicecontainer.py  settings.py  settingsservice.py
src/dpsiw/tools/: __init__.py  gpttool.py
src/dpsiw/web/: server.py
src/dpsiw/workers/: __init__.py  baseworker.py  sbworker.py  worker.py
src/extract_data/: .gitignore  app.py  pdfextractor.py
src/frontends/pdfapprover/: bun.lockb  package-lock.json  package.json  tsconfig.app.json
src/frontends/pdfapprover/src/: babel.config.js  index.css  jest.config.js
src/frontends/pdfapprover/tests/: App.test.tsx
src/frontends/transcriber/: bun.lockb  package.json
src/frontends/transcriber/src/: App.tsx
(+83 files in other folders)
